<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_background"
    android:clipToPadding="false"
    android:fillViewport="true"
    android:scrollbarStyle="outsideOverlay"
    tools:context=".activities.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">


        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="179dp"
            android:layout_height="128dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/circle"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name:" />

            <EditText
                android:id="@+id/input_fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="52dp"
                android:backgroundTint="#000000"

                android:hint="@string/displayName"
                android:inputType="text"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sex:" />

            <Spinner
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="67dp"
                android:layout_weight="1"

                android:backgroundTint="#000000"
                android:entries="@array/gender">

            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Blood Group:" />

            <Spinner
                android:id="@+id/inputBloodGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:layout_weight="1"

                android:backgroundTint="#000000"
                android:entries="@array/Blood_Group">

            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Contact No:" />

            <EditText
                android:id="@+id/inputMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:backgroundTint="#000000"
                android:hint="@string/mobile"

                android:inputType="text"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Address:" />

            <EditText
                android:id="@+id/inputAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:backgroundTint="#000000"
                android:hint="@string/userAddress"

                android:inputType="text"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="City:" />

            <Spinner
                android:id="@+id/inputDivision"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="42dp"
                android:layout_weight="1"
                android:backgroundTint="#000000"

                android:entries="@array/division_list"></Spinner>
        </LinearLayout>

        <EditText
            android:id="@+id/input_userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"

            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"

            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/input_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:hint="@string/prompt_confirm_password"
            android:inputType="textPassword"

            android:textColor="@android:color/white" />

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="376dp"
            android:layout_height="52dp"
            android:text="@string/pledge" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/signin_btn"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</ScrollView>