<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/reg_page_image"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="226dp"
                android:layout_height="229dp"
                android:src="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/facebook_circle" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:src="@drawable/twitter_512" />
            </LinearLayout>

        </LinearLayout>

        <EditText
            android:id="@+id/input_username"
            android:layout_width="388dp"
            android:layout_height="63dp"
            android:backgroundTint="#000000"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/widget_edittext_dark"
            android:textColorHint="#000000" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:backgroundTint="#000000"
            android:textColor="@android:color/widget_edittext_dark"
            android:textColorHint="#000000" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="192dp"
            android:layout_height="90dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/loginbutblue"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/transparent_black_ten_percent"
            android:padding="2dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="#190FCB" />

        <Button
            android:id="@+id/button_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/transparent_black_ten_percent"
            android:padding="2dp"
            android:text="@string/forgotpass"
            android:textAllCaps="false"

            android:textColor="#3F3F47" />

    </LinearLayout>

</ScrollView>